# bsc_physics_cleaner

./: .gitignore  README.md
addendum/: README.md  commit_messages_GRMHD_to_this_repo.txt  commit_messages_SRHD_to_GRMHD.txt
models/NNGR1/: NNGR1.ipynb  NNGR1.py  NNGR1_evaluation.py  NNGR1_train.py  Optimization_05-06-23_10-50.pkl  all_trials.json  best_trial_params.json  optimization_history_Optimization_05-06-23_10-50.html  parallel_coordinate_plot_Optimization_05-06-23_10-50.html  param_importances_plot_Optimization_05-06-23_10-50.html  scheduler.pth  slice_plot_Optimization_05-06-23_10-50.html  test_metrics_NNGR1.csv  train_metrics_NNGR1.csv  train_output.csv  var_dict.json  x_test.csv  x_val.csv  y_test.csv  y_train.csv  y_val.csv
models/NNGR1/cpp/: CMakeLists.txt
models/NNGR2/: NNGR2.ipynb  NNGR2.py  NNGR2_train.py  all_trials.json  best_trial_params.json  parallel_coordinate_plot_Optimization_05-06-23_10-50.html  param_importances_plot_Optimization_05-06-23_1516_long_run1.html  scheduler.pth  slice_plot_Optimization_05-06-23_10-50.html  train_output.csv  var_dict.json  x_test.csv
models/NNGR2/cpp/: CMakeLists.txt
models/NNSR1/: NNSR1.ipynb  NNSR1.py
models/NNSR1/cpp/: CMakeLists.txt
models/NNSR2/: NNSR2.ipynb  NNSR2.py
models/NNSR2/cpp/: CMakeLists.txt
models/NNSR3/: NNSR3.ipynb  NNSR3.py
models/NNSR3/cpp/: CMakeLists.txt
models/NNSR4/: NNSR4.ipynb  NNSR4.py
models/NNSR4/cpp/: CMakeLists.txt
src/GRMHD/: GRMHD.ipynb  GRMHD_ML.ipynb  GRMHD_ML.py  GRMHD_train.py  NNGR2_evaluation.py  NNGR2_optimization.py  Optimization_05-06-23_10-50.pkl  Optimization_05-06-23_1516_long_run1.pkl  optimization_history_Optimization_05-06-23_10-50.html  optimization_history_Optimization_05-06-23_1516_long_run1.html  parallel_coordinate_plot_Optimization_05-06-23_1516_long_run1.html  param_importances_plot_Optimization_05-06-23_10-50.html  slice_plot_Optimization_05-06-23_1516_long_run1.html  test_metrics_NNGR2.csv  train_metrics_NNGR2.csv  x_val.csv  y_test.csv  y_train.csv  y_val.csv
src/GRMHD/cpp/: CMakeLists.txt
src/GRMHD/runs/Jun23_18-16-02_pc98/: events.out.tfevents.1687536962.pc98
src/SRHD/: SRHD_ML.ipynb  SRHD_ML.py
src/SRHD/cpp/: CMakeLists.txt
